tdf#114901 TSCP various advanced TSCP dialog changes

- rename "Part" to "License"
- change Markings from Combo to List box
- minimize whitespace
- move bold and sign paragraph under text area as it is fixed
- remove bold in paragraph dialog

Change-Id: I7ec20460d02d3611a1da325eb7d3de3aef10f03f
Reviewed-on: https://gerrit.libreoffice.org/47632
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 085852e2e2779de1712cf18b5e67740cb7a4bcb6)